# pinentry-win

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: assuan.rs  dialog.rs  error.rs  main.rs  state.rs
