[package]
name = "pinentry-windows"
version = "0.1.0"
edition = "2021"
description = "GnuPG pinentry for Windows using native Win32 dialogs"

[[bin]]
name = "pinentry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-manifest = "1.4"

[profile.release]
opt-level = "s"
strip = true

# Force the GUI subsystem so gpg-agent's CREATE_NO_WINDOW spawn works
# without a flashing console window.  The entry point remains main().
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"]
