[package]
name = "pinentry-win"
version = "0.1.0"
edition = "2021"
description = "GnuPG pinentry for Windows using native Win32 dialogs"

[[bin]]
name = "pinentry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-manifest = "1.4"

[profile.release]
opt-level = "s"
strip = true

# SUBSYSTEM:WINDOWS flags moved to .cargo/config.toml (Cargo.toml doesn't support [target.*] rustflags)
